fixed problem: -text in notification did not fit in container when in mobile view

--- a/sass/_notifications.scss
+++ b/sass/_notifications.scss
@@ -69,3 +69,9 @@
     opacity: 0;
   }
 }
+
+@media screen and (max-width: 840px) {
+  .show-word {
+    height: 3rem;
+  }
+}
